--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -71,13 +71,123 @@ hr {
     background-size: cover;
 }
 
-
-
-.container .judul {
+.judul {
     font-size: 20px;
     font-weight: 500;
     color: #fff;
         margin-left: 92px;
         margin-top: 40px;
         margin-bottom: -30px;
+}
+
+.judulcenter {
+    font-size: 22px;
+    font-weight: 700;
+    color: #fff;
+        margin-top: 60px;
+        margin-bottom: -20px;
+}
+
+.container3 {
+    width: 87%;
+    height: 450px;
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.container3 div {
+    border-radius: 4px;
+    height: 100%;
+    width: 240px;
+}
+
+.container3 .gambar1 {
+    background-image: url(../images/blade-runner-2049.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.container3 .mantap {
+    margin-top: 420px;
+    font-weight: 500;
+    color: #FFF;
+    font-size: 12px;
+}
+
+.container3 .gambar2 {
+    background-image: url(../images/whiplash.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.container3 .gambar3 {
+    background-image: url(../images/interstellar.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.container3 .gambar4 {
+    background-image: url(../images/nightcrawler.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.news {
+    margin-top: 60px;
+    width: 87%;
+    margin-left: 90px;
+    height: 400px;
+}
+
+.news div {
+    height: 180px;
+    width: 100%;
+
+}
+
+.newsatas {
+    display: flex;
+}
+
+.news .newsatas .newskiri {
+    height: 100%;
+    width: 30%;
+    background-color: green;
+    background-image: url(../images/blade-runner-2049.jpg);
+    background-size: cover;
+}
+
+.judulnews {
+
+    font-size: 16px;
+    font-weight: 700;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: #FFF;
+    margin-top: -10px;
+}
+
+.desknews {
+    font-size: 14px;
+    font-weight: 500;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: #FFF;
+
+}
+
+.sourcenews {
+    font-size: 12px;
+    font-weight: 400;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-right: 20px;
+    color: #FFF;
+}
+
+.news .newsatas .newskanan {
+    height: 100%;
+    width: 70%;
+
 }
