--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -37,6 +37,10 @@ body {
     margin-right: 20px;
 }
 
+.ul-coi {
+    margin-left: 870px;
+}
+
 .ul-coi li {
     text-decoration: none;
     list-style: none;
@@ -44,6 +48,7 @@ body {
     font-size: 14px;
     font-weight: 500;
     display: inline;
+    
         margin: 0px 20px;
 }
 
